dark mode default, mobile format fixes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,17 +11,17 @@
 
     /* HSL colours */
     --first-color: hsl(var(--hue-color), 69%, 61%);
-    --first-color-second: hsl(var(--hue-color), 69%, 61%);
+    --first-color-second: hsl(var(--hue-color),  30%, 8%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
     --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
-    --title-color: hsl(var(--hue-color), 8%, 15%);
-    --text-color: hsl(var(--hue-color), 8%, 45%);
+    --title-color: hsl(var(--hue-color),8%, 95%);
+    --text-color: hsl(var(--hue-color), 8%, 75%);
     --text-color-light: hsl(var(--hue-color), 8%, 65%);
-    --input-color: hsl(var(--hue-color), 70%, 96%);
-    --body-color: hsl(var(--hue-color), 60%, 99%);
-    --container-color: #fff;
-    --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
-    --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+    --input-color: hsl(var(--hue-color), 29%, 16%);
+    --body-color: hsl(var(--hue-color),28%, 12%);
+    --container-color: hsl(var(--hue-color), 29%, 16%);
+    --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+    --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
 
     /* main font */
     --body-font: 'Poppins', sans-serif;
@@ -72,14 +72,16 @@
 /*dark theme colours*/
 body.dark-theme{
   /* HSL color mode */
-  --first-color-second: hsl(var(--hue-color), 30%, 8%);;
-  --title-color: hsl(var(--hue-color), 8%, 95%);
-  --text-color: hsl(var(--hue-color), 8%, 75%);
-  --input-color: hsl(var(--hue-color), 29%, 16%);
-  --body-color: hsl(var(--hue-color), 28%, 12%);
-  --container-color: hsl(var(--hue-color), 29%, 16%);
-  --scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
- --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+  --first-color-second: hsl(var(--hue-color), 69%, 61%);;
+  --title-color: hsl(var(--hue-color), 8%, 15%);
+  --text-color: hsl(var(--hue-color), 8%, 45%);
+  --input-color: hsl(var(--hue-color), 70%, 96%);
+  --body-color: hsl(var(--hue-color),  60%, 99%);
+  --container-color: #fff;
+  --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+ --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+
+ 
 }
 
 /*night/light icon*/
@@ -271,7 +273,7 @@ img {
 
 /* Change background header */
 .scroll-header{
-  box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
+  box-shadow: 0 -3px 4px rgba(0, 0, 0, 0.2);
 }
 
 /* home */
@@ -307,11 +309,11 @@ img {
 }
 
 .home__blob-img{
-  background-color: var(--first-color);
   position: relative;
   border-radius: 3.5rem;
   width: 220px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 
@@ -874,6 +876,12 @@ img {
 
 }
 
+@media screen and (max-width: 567px){
+  .home__img{
+    transform: translateX(1rem);
+}
+}
+
 @media screen and (min-width: 768px){
   .container{
       margin-left: auto;
@@ -1014,6 +1022,13 @@ img {
 
   .footer__copy{
       margin-top: 4.5rem;
+  }
+}
+
+@media screen and (min-width: 768px){
+
+  .placeholder{
+      display: none;
   }
 }
 
